# Projects

./: .gitignore  README.md
Tensorflow/: C3_W4_Lab_1_FashionMNIST-CAM.ipynb  C3_W4_Lab_4_GradCam.ipynb
movie-rec-sys/: .gitignore  .sample_env  Dockerfile  README.md  pipeline.yaml  pyproject.toml
movie-rec-sys/app/: app.py  recommender.py  recommender_helper.py
movie-rec-sys/etl/: eda.ipynb  extract.py
